1999-01-07  David Faure  <faure@kde.org>

	* kioslave/file.cpp (OpenDir): Added redirection if HTML View set and
 	opening index.html or .kde.html

1999-01-06  David Faure  <faure@kde.org>

	* kfmprops.*: Commented out the "Working Directory" line edit. It
	isn't used at all. Thanks to the old kb1297.

	* kioslave/ftp_proxy.cpp: Lots of fixes.

1999-01-04  David Faure  <faure@kde.org>

	* kfmgui.cpp: Fixed Tree View being initialized even if not shown.
	This speeds up A LOT navigation in kfm !
	
	* kfmserver.cpp: Applied patch from Andreas Pour for better magic
	file creation. (Removes annoying dialog box at startup).

	* kioslave/tar.cpp: Fixed tar protocol support. Uses sscanf
	instead of strtok. Should work with GNU tar and non-GNU tar, which 
	have a different date format.
	
1999-01-03  David Faure  <faure@kde.org>

	* kfmgui.cpp: Argh, another late bug. When entering a directory in
	a window, all other windows had out-of-date history menus (and
	clicking on one item brought you to another item!). Fixed by
	connecting an AboutToShow for the Go menu to a new method filling
	the go menu (slotUpdateHistoryMenu), taken out from slotUpdateHistory. 

	* krenamewin.cpp, kiojob.cpp: Made window always modal.
	The modal argument is used to know whether to call done(x) or emit
	result(...). Fixes bug introduced by Preston when copying and
	overwriting destination. Thanks Torsten Rahn for reporting.

1998-12-22  Alex Zepeda  <garbanzo@hooked.net>

	* kioslave/ftp_proxy.cpp: Add proper line termination to user
	agent string, so reloading should work?
	* kioslave/http.cpp, http.h: Initial implementation of selectable
	user agent strings.  Also, make sure a connections are not persistant,
	as we're HTTP 1.0 compliant only.  For the time being.
	* config-kfm.h: Make the user-agent string work w/ the very
	pedantic egcs.

1998-12-21  David Faure  <faure@kde.org>

	* passworddialog.cpp : Added layout management
	* More patches from Michael Reiher concerning the tree view