@@ -1,3 +1,7 @@
+1999-01-11  David Faure  <faure@kde.org>
+
+	* kbind.cpp: Store and use terminal settings (set in applnks) in KMimeBind.
+
 1999-01-07  David Faure  <faure@kde.org>
 
 	* kioslave/file.cpp (OpenDir): Added redirection if HTML View set and
